{
    "name": "PlayerInputsActions",
    "maps": [
        {
            "name": "PlayerMovementController",
            "id": "bcb93404-b78e-4d20-9651-983bebb66be8",
            "actions": [
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "fb915e7c-c171-4cc7-8dd8-846786b05024",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RunButton",
                    "type": "Button",
                    "id": "049bcbdc-ac6e-444e-aa87-ce9973094817",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD Vector",
                    "id": "2997a9f0-8c82-4cee-a35e-8c105e37224d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "0c566c42-bfc5-4385-b081-fdffaa5e8bb2",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "558e3978-ab19-4de9-a514-5ff6b13ea43c",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "e017388f-adae-45ed-b31e-84bf6f4a26b1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "ce136a65-7398-4a1b-b709-73f16cf4e7c6",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "302230f9-24da-4251-bd53-e5c07de67819",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RunButton",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerCameraController",
            "id": "e0a19865-5afd-4fff-a040-4edcb96d0182",
            "actions": [
                {
                    "name": "Mouse",
                    "type": "PassThrough",
                    "id": "b2cc0391-edec-4cd2-9abb-8a23674c492b",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "a63d5492-e150-4230-bc44-df7ce9daf614",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Mouse",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "PlayerWeaponsController",
            "id": "5d26232a-7f9e-45b6-9b22-95a3a1340a9e",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "Button",
                    "id": "dd051269-483f-4c00-91c5-973532b0dc00",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Hold(duration=0.01,pressPoint=0.01)",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "0961554d-48bf-404b-9945-6f527c486083",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "afcf1764-7b67-406f-abe7-f9770aa56127",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlotOne",
                    "type": "Button",
                    "id": "b231a80c-1a03-4b03-8df4-2c4c79ca4572",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlotTwo",
                    "type": "Button",
                    "id": "32faee11-efd5-41b8-893b-725da3409660",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSlotThree",
                    "type": "Button",
                    "id": "9ce578a2-a94c-4658-a500-d3f0a27b9e53",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "dc7daf4d-4ce9-4147-ab76-ed9117ee1b97",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "03f45359-bd68-46e4-b64e-94677015fc62",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8737ee97-eec3-446d-bd27-166c1fd87790",
                    "path": "<Mouse>/rightButton",
                    "interactions": "Hold(duration=0.1,pressPoint=0.1)",
                    "processors": "",
                    "groups": "",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "71a20df9-0da8-4503-92e2-03b35eb0b62a",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlotOne",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "72afb44c-daa2-49cb-99a2-047d04dd7ace",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlotTwo",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "c3122137-587c-4818-a0b4-ef1f59a8614b",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "WeaponSlotThree",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}